# cmake-doodles

./: README.rst
pb11/: CMakeLists.txt  mymod.cpp
subdir-lib/: CMakeLists.txt  README.rst  main.cpp
subdir-lib/fancy_lib/: CMakeLists.txt
subdir-lib/fancy_lib/include/fancy/: fancy.h
subdir-lib/fancy_lib/src/: fancy.cpp
